# opencv_projects

./: .gitignore
background-detection/: CMakeCache.txt  CMakeLists.txt  Makefile  backdetect  backdetect.cpp  backgroundDG.py
body/: CMakeLists.txt  cascade
c++/: CMakeLists.txt
c++/background-detection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
c++/body/: CMakeCache.txt  Makefile  body_detection  bodydetect.cpp  cascade_hog.cpp  cmake_install.cmake
c++/cascade-tests/: CMakeCache.txt  CMakeLists.txt  cascade.cpp~
c++/color_backgroud_subtraction/: CMakeCache.txt  Makefile
c++/face-detection/: CMakeCache.txt  CMakeLists.txt  Makefile  face_detection  face_detection.cpp
c++/frame-counter/: CMakeLists.txt  fps
c++/gamma_correction/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gamma_correction  main.cpp
c++/perspective_transform/: CMakeCache.txt  Makefile  analisa.py  analise.csv  cmake_install.cmake  deformation_analisys_circle.cpp  deformation_analisys_point.cpp
c++/skeleton/: main.cpp
c++/test/: Makefile  main.cpp
c++/utils/: utils.cpp  utils.hpp
cascade-tests/: Makefile  cascade  cascade.cpp  cmake_install.cmake
color_backgroud_subtraction/: CMakeLists.txt  bkg_detection  bkg_detection.cpp  cmake_install.cmake
data/: face.webm  face2.webm  face3.webm  move.webm
face-detection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  face_detection  face_detection.cpp
frame-counter/: CMakeCache.txt  (+4 more)
perspective_transform/: CMakeLists.txt  deformation_analisys  deformation_analisys_point  perspective_examples.cpp  transform_behavior.ods
(+3 files in other folders)
